--- a/client/templates/explore.html
+++ b/client/templates/explore.html
@@ -4,14 +4,33 @@
 			<button id="new" class="btn btn-primary center-block">New</button>
 			<div id="category" class="row center-block">
 				<h5>Categories</h5>
-				<div class="input-group">
+				
+				<div data-toggle="buttons" class="btn-group">
+					<label class="btn btn-default active">All
+						<input type="checkbox" autocomplete="off" checked>
+					</label>
+					<label class="btn btn-default">Mechanical
+						<input type="checkbox" autocomplete="off">
+					</label>
+					<label class="btn btn-default">Aeronautical
+						<input type="checkbox" autocomplete="off">
+					</label>
+					<label class="btn btn-default">Electrical
+						<input type="checkbox" autocomplete="off">
+					</label>
+					<label class="btn btn-default">Electronic
+						<input type="checkbox" autocomplete="off">
+					</label>
+				</div>
+				
+				<!--<div class="input-group">
 					<div class="input-group-button text-center">
 						<button class="btn btn-default category-btn">Mechanical</button>
 						<button class="btn btn-default category-btn">Aeronautical</button>
 						<button class="btn btn-default category-btn">Electrical</button>
 						<button class="btn btn-default category-btn">Electronic</button>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 		<div id="right-panel" class="col-md-10">
