--- a/client/templates/master.html
+++ b/client/templates/master.html
@@ -31,12 +31,10 @@
 					</li>
 				{{else}}
 					<li>
-						<!--<a href="{{pathFor route='authentication'}}">Login</a>-->
-						<a data-toggle="modal" data-target="#login">Login</a>
+						<a class="clickable" data-toggle="modal" data-target="#login">Login</a>
 					</li>
 					<li>
-						<!--<a href="{{pathFor route='authentication'}}">Register</a>-->
-						<a data-toggle="modal" data-target="#register">Register</a>
+						<a class="clickable" data-toggle="modal" data-target="#register">Register</a>
 					</li>
 				{{/if}}
 				</ul>
