--- a/client/templates/new-project-p3.html
+++ b/client/templates/new-project-p3.html
@@ -30,7 +30,7 @@
 </template>
 
 <template name="model">
-	<div id="new-project-task-{{_id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" class="modal fade">
+	<div id="new-project-task-{{_id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" class="modal new-task-modal fade">
 		<div role="document" class="modal-dialog new-project-task-modal">
 			<div class="modal-content">
 				<div class="modal-body">
