--- a/client/templates/new-project-p4.html
+++ b/client/templates/new-project-p4.html
@@ -1,7 +1,8 @@
 <template name="newProjectP4">
-	<div class="container-fluid">
+	<div class="container-fluid text-center">
 		<h3 class="text-center"> <span class="glyphicon glyphicon-thumbs-up"></span></h3>
 		<h3 class="text-center">You are way to go :)</h3>
 		<h6 class="text-center text-muted">Redirecting you to project panel...</h6>
+		<i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw margin-bottom"></i>
 	</div>
 </template>
