--- a/ui_coding/jade/user.jade
+++ b/ui_coding/jade/user.jade
@@ -18,7 +18,8 @@ block navbar-link
       a(data-toggle="dropdown") Username
         span.caret
       ul.dropdown-menu
-        li.user-control-dropdown Configure
+        li.user-control-dropdown
+          a(href="user_config.html") Configure
         li.divider(role="separator")
         li.user-control-dropdown Logout
 
